# CeresSamples

./: README.md
CurveFitting/: CMakeLists.txt  GenerateRawData.py  main.cpp
OptimizationWithConstraint/: CMakeLists.txt  main.cpp
PowellOptimization/: CMakeLists.txt  main.cpp
Robot2DOptimization/: CMakeLists.txt  GenerateData.py  csvparser.h  main.cpp
RobustCurveFitting/: CMakeLists.txt  data.csv  main.cpp  plot.py
SimpleOptimizationSample/: CMakeLists.txt  main.cpp
